[workspace]
# Both India F&O and Crypto are first-class citizens
default-members = ["apps/quantlaxmi-india", "apps/quantlaxmi-crypto"]
members = [
    # Core crates (shared trading spine)
    "crates/quantlaxmi-models",
    "crates/quantlaxmi-events",
    "crates/quantlaxmi-core",
    "crates/quantlaxmi-data",
    "crates/quantlaxmi-risk",
    "crates/quantlaxmi-executor",
    "crates/quantlaxmi-options",
    "crates/quantlaxmi-sbe",

    # Unified paper trading spine (venue-agnostic)
    "crates/quantlaxmi-paper",

    # Platform spine (Phase 1)
    "crates/quantlaxmi-gates",
    "crates/quantlaxmi-wal",

    # Evaluation (Phase 26)
    "crates/quantlaxmi-eval",

    # Regime Detection (Phase 28 - Grassmann Manifolds)
    "crates/quantlaxmi-regime",

    # SLRT Reference Implementation (Phase 1 CPU-only)
    "crates/slrt-ref",

    # Options Engine (Phase 29 - World-Class Options Trading)
    "crates/quantlaxmi-options-engine",

    # Strategy SDK (Phase 2)
    "crates/quantlaxmi-strategy",

    # Venue connectors (isolated by market)
    "crates/quantlaxmi-connectors-zerodha",
    "crates/quantlaxmi-connectors-binance",

    # Runner libraries (isolated by market)
    "crates/quantlaxmi-runner-common",
    "crates/quantlaxmi-runner-india",
    "crates/quantlaxmi-runner-crypto",

    # Application binaries
    "apps/quantlaxmi-india",
    "apps/quantlaxmi-crypto",
    "apps/basis-harvester",

]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.77"
criterion = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
ratatui = "0.28"
crossterm = "0.28"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
url = "2.4"
dotenvy = "0.15"
byteorder = "1.5"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
axum = "0.7"
opentelemetry = { version = "0.21" }
tracing-opentelemetry = "0.22"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.2" }
tower-http = { version = "0.5", features = ["cors", "fs"] }
arrow = { version = "53", default-features = false, features = ["ipc"] }
parquet = { version = "53", default-features = false, features = ["arrow", "snap"] }
good_lp = { version = "1.8", default-features = false, features = ["microlp"] }
tempfile = "3.10"

# Memory-safe build profiles to prevent OOM during compilation/tests
[profile.dev]
debug = 1        # Reduced debug info (faster compile, less memory)
incremental = false  # Prevent 16GB+ cache bloat that causes OOM/system reboot

[profile.test]
opt-level = 1        # Slight optimization reduces test binary memory footprint
incremental = false  # Prevent cache bloat during test builds
